# ai-assistant-for-qualitative-analysis

./: .gitignore  AGENTS.md  README.md  config.openai_psychological_depth_fixture.yaml  config.yaml  enums.py  example_writing_samples.csv  pyproject.toml  requirements.txt  run_pipeline.py  schemas.py
outputs_openai_psychological_depth_fixture/: output_ds_summaried_wide.manifest.json
outputs_openai_psychological_depth_fixture_gpt41mini/: output_ds_inclusive_long.manifest.json  output_ds_summaried_wide.manifest.json
outputs_openai_psychological_depth_fixture_gpt41mini_v2/: output_ds_inclusive_long.manifest.json  output_ds_summaried_wide.manifest.json
project_management/: BLUEPRINT.md  IMPLEMENTATION_PROGRESS.md  PLANS.md  README.md  ai_qualitative_analysis_blueprint.md  generalizing_features.md  integrative_complexity.md  meta-notes.md  temporary_prompt.md  temporary_prompts.md
prompts/: analysis_instructions_main_analysis.txt  analysis_instructions_psychological_depth_main_analysis.txt  prompt_template_psychological_depth_main_analysis.txt  task_descriptions_template.yaml
providers/: __init__.py  base.py  litellm_openai.py  mock.py
tests/: conftest.py  test_config_loading.py  test_dataset_ingest.py  test_diagnostics.py  test_inclusive_long_output.py  test_litellm_openai_provider.py  test_mock_provider.py  test_output_contracts.py  test_output_merge.py  test_package_skeleton.py  test_parsing_and_call_records.py  test_pipeline_entrypoint.py  test_prompt_rendering.py  test_repeated_call_execution.py  test_sample_assets.py  test_summarized_wide_output.py
(+25 files in other folders)
